--- a/app/src/main/res/layout/fragment_food_joke.xml
+++ b/app/src/main/res/layout/fragment_food_joke.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#B5A2A2"
-    tools:context=".FoodJokeFragment">
+    tools:context=".ui.fragments.foodJoke.FoodJokeFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
