--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,4 +28,6 @@
     <color name="ChipBackgroundColor">@color/lightGray</color>
     <color name="checkChipTextColor">@color/colorPrimary</color>
     <color name="chipTextColor">@color/darkGray</color>
+
+    <color name="actionBarBackgroundColor">@color/colorPrimary</color>
 </resources>
