--- a/app/src/main/res/layout/favorite_recipes_row_layout.xml
+++ b/app/src/main/res/layout/favorite_recipes_row_layout.xml
@@ -10,6 +10,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:padding="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
@@ -38,6 +39,7 @@
                     android:layout_width="200dp"
                     android:layout_height="0dp"
                     android:scaleType="centerCrop"
+                    loadImageFromUrl="@{favoritesEntity.result.image}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -51,6 +53,7 @@
                     android:layout_marginTop="12dp"
                     android:layout_marginEnd="12dp"
                     android:ellipsize="end"
+                    android:text="@{favoritesEntity.result.title}"
                     android:fontFamily="@font/courgette"
                     android:maxLines="2"
                     android:textColor="@color/darker"
@@ -68,6 +71,7 @@
                     android:layout_marginTop="12dp"
                     android:ellipsize="end"
                     android:maxLines="3"
+                    android:text="@{favoritesEntity.result.summary}"
                     android:textColor="@color/darkGray"
                     app:layout_constraintEnd_toEndOf="@+id/favorite_title_textView"
                     app:layout_constraintStart_toStartOf="@+id/favorite_title_textView"
@@ -93,6 +97,7 @@
                     android:text="100"
                     android:textColor="@color/red"
                     android:textAlignment="center"
+                    setNumberOfLikes="@{favoritesEntity.result.aggregateLikes}"
                     app:layout_constraintStart_toStartOf="@+id/favorite_description_textView"
                     app:layout_constraintTop_toBottomOf="@+id/favorite_heart_imageView" />
 
@@ -112,6 +117,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
                     android:text="100"
+                    setNumberOfMinutes="@{favoritesEntity.result.readyInMinutes}"
                     android:textAlignment="center"
                     android:textColor="@color/yellow"
                     app:layout_constraintStart_toEndOf="@+id/favorite_heart_textView"
@@ -121,6 +127,7 @@
                     android:id="@+id/favorite_leaf_imageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    applyVeganColor="@{favoritesEntity.result.vegan}"
                     app:layout_constraintEnd_toEndOf="@+id/favorite_leaf_textView"
                     app:layout_constraintStart_toStartOf="@+id/favorite_leaf_textView"
                     app:layout_constraintTop_toTopOf="@+id/favorite_clock_imageView"
@@ -131,7 +138,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
-                    android:text="Vegan"
+                    android:text="@string/vegan"
+                    applyVeganColor="@{favoritesEntity.result.vegan}"
                     android:textAlignment="center"
                     app:layout_constraintStart_toEndOf="@+id/favorite_clock_textView"
                     app:layout_constraintTop_toBottomOf="@+id/favorite_leaf_imageView" />
