show if no data and display sad image

--- a/app/src/main/res/layout/fragment_food_joke.xml
+++ b/app/src/main/res/layout/fragment_food_joke.xml
@@ -63,19 +63,21 @@
             style="?android:attr/progressBarStyle"
             readApiResponse3="@{mainViewModel.foodJokeResponse}"
             readDatabase3="@{mainViewModel.readFoodJoke}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/foodJokeError_imageView"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:alpha="0.5"
+            readApiResponse4="@{mainViewModel.foodJokeResponse}"
+            readDatabase4="@{mainViewModel.readFoodJoke}"
             android:src="@drawable/ic_dissatisfied"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -92,6 +94,8 @@
             android:layout_marginTop="8dp"
             android:alpha="0.5"
             android:text="Error"
+            readApiResponse4="@{mainViewModel.foodJokeResponse}"
+            readDatabase4="@{mainViewModel.readFoodJoke}"
             android:textSize="18sp"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="@+id/foodJokeError_imageView"
