--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -16,11 +16,13 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.Toolbar
+            android:background="@color/colorPrimary"
             android:id="@+id/toolBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <com.google.android.material.tabs.TabLayout
+            android:background="@color/colorPrimary"
             android:id="@+id/tabLayout"
             style="@style/CustomTabLayoutStyle"
             app:tabTextAppearance="@style/CustomTabTextStyle"
