--- a/app/src/main/res/layout/favorite_recipes_row_layout.xml
+++ b/app/src/main/res/layout/favorite_recipes_row_layout.xml
@@ -17,133 +17,97 @@
         android:layout_marginTop="4dp"
         app:layout_goneMarginBottom="4dp">
 
+
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/favorite_row_cardView"
-            android:layout_width="0dp"
+            android:id="@+id/favoriteRowCardView"
+            style="@style/RecipeCardStyle"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="10dp"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginVertical="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:strokeColor="@color/lightMediumGray"
-            app:strokeWidth="1dp">
+            app:layout_constraintTop_toTopOf="parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cardRecipe"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white">
+                android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@+id/favorite_recipe_imageView"
-                    android:layout_width="200dp"
-                    android:layout_height="0dp"
-                    android:scaleType="centerCrop"
+                    android:id="@+id/ivRecipe"
                     loadImageFromUrl="@{favoritesEntity.result.image}"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="160dp"
+                    android:scaleType="centerCrop"
+                    android:transitionName="recipeImage"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:srcCompat="@tools:sample/avatars" />
+                    tools:ignore="ContentDescription"
+                    tools:src="@tools:sample/avatars" />
 
                 <TextView
-                    android:id="@+id/favorite_title_textView"
+                    android:id="@+id/textName"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginEnd="12dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
                     android:ellipsize="end"
-                    android:text="@{favoritesEntity.result.title}"
                     android:fontFamily="@font/courgette"
                     android:maxLines="2"
-                    android:textColor="@color/darker"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    android:text="@{favoritesEntity.result.title}"
+                    android:textColor="@color/titleColor"
+                    android:textSize="14sp"
+                    app:layout_constraintEnd_toStartOf="@+id/ivTime"
                     app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toEndOf="@+id/favorite_recipe_imageView"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/ivRecipe"
+                    tools:text="Healthy Croissant Sandwich" />
 
                 <TextView
-                    android:id="@+id/favorite_description_textView"
+                    android:id="@+id/textAuthor"
+                    parseHtml="@{favoritesEntity.result.summary}"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
-                    android:ellipsize="end"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="16dp"
+                    android:fontFamily="@font/sf_pro_text_medium"
                     android:maxLines="3"
-                    parseHtml="@{favoritesEntity.result.summary}"
-                    android:textColor="@color/darkGray"
-                    app:layout_constraintEnd_toEndOf="@+id/favorite_title_textView"
-                    app:layout_constraintStart_toStartOf="@+id/favorite_title_textView"
-                    app:layout_constraintTop_toBottomOf="@+id/favorite_title_textView" />
-
-                <ImageView
-                    android:id="@+id/favorite_heart_imageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginBottom="36dp"
+                    android:textSize="12sp"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@+id/favorite_heart_textView"
-                    app:layout_constraintStart_toStartOf="@+id/favorite_heart_textView"
-                    app:layout_constraintTop_toBottomOf="@+id/favorite_description_textView"
-                    app:srcCompat="@drawable/ic_favorite"
-                    app:tint="@color/red" />
+                    app:layout_constraintEnd_toEndOf="@+id/textName"
+                    app:layout_constraintStart_toStartOf="@+id/textName"
+                    app:layout_constraintTop_toBottomOf="@+id/textName"
+                    tools:text="by Lance Bogrol" />
 
                 <TextView
-                    android:id="@+id/favorite_heart_textView"
+                    android:id="@+id/textTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@{String.valueOf(favoritesEntity.result.aggregateLikes)}"
-                    android:textColor="@color/red"
-                    android:textAlignment="center"
-                    app:layout_constraintStart_toStartOf="@+id/favorite_description_textView"
-                    app:layout_constraintTop_toBottomOf="@+id/favorite_heart_imageView" />
-
-                <ImageView
-                    android:id="@+id/favorite_clock_imageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:tint="@color/yellow"
-                    app:layout_constraintEnd_toEndOf="@+id/favorite_clock_textView"
-                    app:layout_constraintStart_toStartOf="@+id/favorite_clock_textView"
-                    app:layout_constraintTop_toTopOf="@+id/favorite_heart_imageView"
-                    app:srcCompat="@drawable/ic_clock" />
-
-                <TextView
-                    android:id="@+id/favorite_clock_textView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
+                    android:layout_marginEnd="16dp"
+                    android:fontFamily="@font/sf_pro_text_medium"
                     android:text="@{String.valueOf(favoritesEntity.result.readyInMinutes)}"
-                    android:textAlignment="center"
-                    android:textColor="@color/yellow"
-                    app:layout_constraintStart_toEndOf="@+id/favorite_heart_textView"
-                    app:layout_constraintTop_toBottomOf="@+id/favorite_clock_imageView" />
+                    android:textSize="12sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/ivRecipe"
+                    tools:text="25 min" />
 
                 <ImageView
-                    android:id="@+id/favorite_leaf_imageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    applyVeganColor="@{favoritesEntity.result.vegan}"
-                    app:layout_constraintEnd_toEndOf="@+id/favorite_leaf_textView"
-                    app:layout_constraintStart_toStartOf="@+id/favorite_leaf_textView"
-                    app:layout_constraintTop_toTopOf="@+id/favorite_clock_imageView"
-                    app:srcCompat="@drawable/ic_eco" />
-
-                <TextView
-                    android:id="@+id/favorite_leaf_textView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
-                    android:text="@string/vegan"
-                    applyVeganColor="@{favoritesEntity.result.vegan}"
-                    android:textAlignment="center"
-                    app:layout_constraintStart_toEndOf="@+id/favorite_clock_textView"
-                    app:layout_constraintTop_toBottomOf="@+id/favorite_leaf_imageView" />
+                    android:id="@+id/ivTime"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_marginEnd="6dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/textTime"
+                    app:layout_constraintEnd_toStartOf="@+id/textTime"
+                    app:layout_constraintTop_toTopOf="@+id/textTime"
+                    app:srcCompat="@drawable/ic_time"
+                    app:tint="@color/colorAccent"
+                    tools:ignore="ContentDescription" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
+
         </com.google.android.material.card.MaterialCardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
