--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -33,6 +33,7 @@
     <TextView
         android:id="@+id/time_textView"
         android:layout_width="wrap_content"
+        android:fontFamily="@font/sf_pro_text_medium"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
         android:layout_marginBottom="12dp"
@@ -57,6 +58,7 @@
         android:id="@+id/likes_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/sf_pro_text_medium"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="12dp"
         android:text="@string/_100"
@@ -105,6 +107,7 @@
     <TextView
         android:id="@+id/vegetarian_textView"
         android:layout_width="wrap_content"
+        android:fontFamily="@font/sf_pro_text_medium"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="@string/vegetarian"
@@ -128,6 +131,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="@string/vegan"
+        android:fontFamily="@font/sf_pro_text_medium"
         app:layout_constraintBottom_toBottomOf="@+id/vegan_imageView"
         app:layout_constraintStart_toEndOf="@+id/vegan_imageView"
         app:layout_constraintTop_toTopOf="@+id/vegan_imageView" />
@@ -145,6 +149,7 @@
     <TextView
         android:id="@+id/dairy_free_textView"
         android:layout_width="wrap_content"
+        android:fontFamily="@font/sf_pro_text_medium"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="@string/dairy_free"
@@ -167,6 +172,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:fontFamily="@font/sf_pro_text_medium"
         android:text="@string/gluten_free"
         app:layout_constraintBottom_toBottomOf="@+id/gluten_free_imageView"
         app:layout_constraintStart_toEndOf="@+id/gluten_free_imageView"
@@ -187,6 +193,7 @@
     <TextView
         android:id="@+id/healthy_textView"
         android:layout_width="wrap_content"
+        android:fontFamily="@font/sf_pro_text_medium"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="@string/healthy"
@@ -209,6 +216,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:fontFamily="@font/sf_pro_text_medium"
         android:text="@string/cheap"
         app:layout_constraintBottom_toBottomOf="@+id/cheap_imageView"
         app:layout_constraintStart_toEndOf="@+id/cheap_imageView"
@@ -235,6 +243,7 @@
             <TextView
                 android:id="@+id/summary_textView"
                 android:layout_width="match_parent"
+                android:fontFamily="@font/sf_pro_text_regular"
                 android:layout_height="wrap_content"
                 android:text="TextView"
                 android:textSize="16sp" />
