--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -9,7 +9,7 @@
         android:icon="@drawable/ic_star"/>
 
     <item android:id="@+id/foodJokeFragment"
-        android:title="@string/food_joke"
-        android:icon="@drawable/ic_food_joke"/>
+        android:title="@string/Other"
+        android:icon="@drawable/ic_other"/>
 
 </menu>
