--- a/app/src/main/res/layout/favorite_recipes_row_layout.xml
+++ b/app/src/main/res/layout/favorite_recipes_row_layout.xml
@@ -9,14 +9,6 @@
             type="com.fatihhernn.recipes.data.database.entities.FavoritesEntity" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/favoriteRecipesRowLayout"
-        android:padding="4dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        app:layout_goneMarginBottom="4dp">
-
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/favoriteRowCardView"
@@ -24,14 +16,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
-            android:layout_marginVertical="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_marginVertical="8dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/cardRecipe"
+                style="@style/RecipeCardStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -110,5 +99,4 @@
 
         </com.google.android.material.card.MaterialCardView>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
