--- a/app/src/main/res/layout/fragment_order.xml
+++ b/app/src/main/res/layout/fragment_order.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:src="@drawable/ic_orderfood"
+        android:src="@drawable/onboardingimage3"
         app:layout_constraintBottom_toTopOf="@+id/txtTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,9 +21,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/txtTitle"
+        android:fontFamily="@font/sf_pro_text_medium"
+        android:textColor="#b96f00"
+        android:textSize="30sp"
         android:text="Order Your Food"
-        android:textColor="@color/colorPrimary"
-        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/txtDescription"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,10 +34,11 @@
         android:id="@+id/txtDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxWidth="220dp"
         android:text="Now you can order food any time right from your mobile"
         android:textColor="@color/colorPrimary"
-        android:textSize="@dimen/_14ssp"
+        android:textSize="20sp"
+        android:fontFamily="@font/sf_pro_text_medium"
+        android:maxWidth="300dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
