--- a/app/src/main/res/layout/activity_on_boarding_start.xml
+++ b/app/src/main/res/layout/activity_on_boarding_start.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.onBoarding.OnBoardingStartActivity">
+    tools:context=".ui.activities.onBoarding.OnBoardingActivity">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imgPrevious"
@@ -23,6 +23,7 @@
         android:layout_height="?actionBarSize"
         android:background="?selectableItemBackgroundBorderless"
         android:gravity="center"
+        android:fontFamily="@font/sf_pro_text_medium"
         android:text="Skip"
         android:onClick="onClick"
         android:textColor="@color/colorPrimary"
@@ -47,6 +48,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:text="Next"
+        android:fontFamily="@font/sf_pro_text_medium"
         android:background="@drawable/blue_circle"
         app:layout_constraintBottom_toBottomOf="parent"
         android:textColor="@color/white"
