--- a/app/src/main/res/layout/favorite_recipes_row_layout.xml
+++ b/app/src/main/res/layout/favorite_recipes_row_layout.xml
@@ -63,6 +63,7 @@
                     android:layout_marginBottom="16dp"
                     android:fontFamily="@font/sf_pro_text_medium"
                     android:maxLines="3"
+                    android:ellipsize="end"
                     android:textSize="12sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@+id/textName"
